--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                         <img src="https://github.com/Kusmanito/ppphoto/blob/main/logo.png?raw=true" alt="Логотип Люберецкого техникума" class="logo-img">
                     </div>
                     <div class="logo-text">
-                        <h1>Применение искусственного интеллекта в Люберецком техникуме</h1>
+                        <h1>
+ИИ в Люберецком техникуме: От обучения к практике</h1>
                         <p class="slogan">Осень 2025: Достижения по интеграции ИИ-технологий в образовательные программы</p>
                     </div>
                 </div>
